--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: Iewoaix third home
-subtitle: Personal blog
+title: Iewoaix'Blogs
+subtitle: My Love
 description: While there is life there is hope. 
 # 头像里面的标题
 avatarTitle: Iewoaix
 # 头像里面的描述
 avatarDesc: 信息安全
-url: "https://iewoaix.github.io"
+url: "https://iewoaix8736.github.io"
 
 # Comment
 comment:
