--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Basic
-title: Iewoaix'Blogs
+title: 动感光波blubiu
 subtitle: My Love
-description: While there is life there is hope. 
+description: 上网不网恋，简直浪费电. 
 # 头像里面的标题
-avatarTitle: Iewoaix
+avatarTitle: blubiu
 # 头像里面的描述
 avatarDesc: 信息安全
-url: "https://iewoaix8736.github.io"
+url: "https://blubiu.github.io"
 
 # Comment
 comment:
     # disqus: leopard
-    duoshuo: Iewoaix
+    duoshuo: blubiu
 
 # Social
 social:
     weibo: no 
-    github: Iewoaix
+    github: blubiu
     # twitter: 
-    QQ: 1012097210 
+    Email:  
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 
