--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ cover_color: clear
 
 # The blog button should not be removed.
 blog_button:
-    title: Iewoaix'Blogs 
+    title: blubiu'Blogs 
 
 # Navigation buttons in the front page.s
 nav:
