--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ permalink: /:year/:month/:title/
 # Format
 highlighter: rouge
 
-# supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
+supported colors: blue, green, purple, red, orange or slate.
 cover_color: clear
 
 # The blog button should not be removed.
